# otus_cpp_allocator

./: .travis.yml  CMakeLists.txt  custom_heap.cpp  custom_heap.h  main.cpp
inc/: custom_allocator.h  custom_heap.h  custom_vector.h  factorial.h
src/: CMakeLists.txt  custom_heap.cpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
